# EightBallCpp

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build.bat  build.sh  clean.sh  cleanup.bat  cleanup.sh  conanfile.txt  scan.bat  scan.sh  setvsenv.ps1
.github/workflows/: debricked.yml  fod.yml
data/: answers.db  eightball.xml
etc/sast-custom-rules/: example-custom-rules.xml
src/: Answer.cpp  Answer.h  Answer.hpp  AnswerSQL.cpp  AnswerSQL.hpp  AnswerXML.cpp  AnswerXML.hpp  Database.cpp  Database.h  Shell.cpp  Shell.h  Shell.hpp  main.cpp  stdafx.h
